# spc-hpc-pipeline

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  config.py  connection.py  count_files.sh  getScotlandData.sh  helpers.py  monitor.py  requirements.txt  spc-hpc-client.py
data/: new_lad_list.csv  new_lad_list_England.csv  new_lad_list_Scotland.csv  new_lad_list_Wales.csv  spenser_lad_list.csv
data/changes/: README.md  bfd42c59.csv  old_to_new_mapping.csv
scripts/: SPENSER_HPC_setup.sh  test_upload.sh
scripts/full_pipeline/: README.md  collation.sh  install.sh  run_all_lads.sh  single_lad.sh  single_lad_microsimulation.sh  single_lad_microsimulation_rs.sh
scripts/postprocessing/: final_check.py  spenser_to_2020_lads.py
scripts/scp/: NOMIS_API_KEY.txt  SPENSER_HPC_setup.sh  ass_current_2012.json  ass_current_2022.json  ass_current_2032.json  ass_current_2039.json  nomis.txt  ssm_current.json  ssm_h_current.json
scripts/test/: test_upload.sh
spenser-rs/: Cargo.toml  config  data  persistent_data
spenser-rs/src/: assignment.rs  config.rs  household.rs  lib.rs  person.rs  queues.rs
spenser-rs/tests/data/: ssm_E09000001_MSOA11_ppp_2020.csv  ssm_hh_E09000001_OA11_2020.csv
submodules/: collation.sh  install_script.sh  remaining_regions_england.sh  remaining_regions_no_fix.sh  remaining_regions_scotland.sh  single_region.sh
