[package]
name = "spenser-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "assignment"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.1", features = ["cargo", "derive"] }
csv = "1.3.0"
env_logger = "0.11.2"
hashbrown = "0.14.3"
lazy_static = "1.4.0"
log = "0.4.20"
polars = { version = "0.37.0", features = ["lazy", "decompress", "replace"] }
rand = "0.8.5"
rayon = "1.8.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.114"
tracing = "0.1.40"
typed-index-collections = { version = "3.1.0", features = ["serde-std"] }
